Bug#19995 (Extreneous table maps generated for statements that do not generate rows): Switched to writing out table maps for tables that are locked when the first row in a statement is seen.